--- a/output.css
+++ b/output.css
@@ -546,6 +546,10 @@ video {
   height: 1.5rem;
 }
 
+.h-full {
+  height: 100%;
+}
+
 .h-screen {
   height: 100vh;
 }
@@ -554,8 +558,90 @@ video {
   width: 1.5rem;
 }
 
+.w-full {
+  width: 100%;
+}
+
 .w-screen {
   width: 100vw;
+}
+
+@keyframes shortestpath {
+  0% {
+    transform: scale(0.3);
+    background-color: #a2f294;
+    border-radius: 100%;
+  }
+
+  50% {
+    background-color: #6bf553;
+  }
+
+  75% {
+    transform: scale(1.2);
+    background-color: #208a0e;
+  }
+
+  100% {
+    transform: scale(1);
+    background-color: #39fc17;
+  }
+}
+
+.animate-\[shortestpath_100ms_ease\] {
+  animation: shortestpath 100ms ease;
+}
+
+@keyframes visited {
+  0% {
+    transform: scale(0.3);
+    background-color: rgba(0, 0, 66, 0.75);
+    border-radius: 100%;
+  }
+
+  50% {
+    background-color: rgba(17, 104, 217, 0.75);
+  }
+
+  75% {
+    transform: scale(1.2);
+    background-color: rgba(0, 217, 159, 0.75);
+  }
+
+  100% {
+    transform: scale(1);
+    background-color: #00beda;
+  }
+}
+
+.animate-\[visited_300ms_ease\] {
+  animation: visited 300ms ease;
+}
+
+@keyframes visited {
+  0% {
+    transform: scale(0.3);
+    background-color: rgba(0, 0, 66, 0.75);
+    border-radius: 100%;
+  }
+
+  50% {
+    background-color: rgba(17, 104, 217, 0.75);
+  }
+
+  75% {
+    transform: scale(1.2);
+    background-color: rgba(0, 217, 159, 0.75);
+  }
+
+  100% {
+    transform: scale(1);
+    background-color: #00beda;
+  }
+}
+
+.animate-\[visited_200ms_ease\] {
+  animation: visited 200ms ease;
 }
 
 .grid-cols-\[repeat\(40\2c 24px\)\] {
@@ -591,16 +677,6 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
-.bg-red-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
-}
-
-.bg-blue-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
-}
-
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -610,3 +686,38 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(250 204 21 / var(--tw-bg-opacity));
 }
+
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.ease-linear {
+  transition-timing-function: linear;
+}
+
+/* @apply visited-animation {
+    animation: visitedAnimation 300 ease-linear;
+  }
+  @keyframes visitedAnimation {
+    0% {
+      transform: scale(0.3);
+      background-color: rgba(0, 0, 66, 0.75);
+      border-radius: 100%;
+    }
+
+    50% {
+      background-color: rgba(17, 104, 217, 0.75);
+    }
+
+    75% {
+      transform: scale(1.2);
+      background-color: rgba(0, 217, 159, 0.75);
+    }
+
+    100% {
+      transform: scale(1);
+      background-color: rgba(0, 190, 218, 0.75);
+    }
+  } */
